apps/vpn/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpn
  namespace: ynoacamino
  labels:
    app: vpn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpn
  template:
    metadata:
      labels:
        app: vpn
    spec:
      nodeSelector:
        kubernetes.io/hostname: ynoacamino-instance
      containers:
        - name: vpn
          image: ghcr.io/wg-easy/wg-easy
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
          ports:
            - containerPort: 51820
              hostPort: 51820
              protocol: UDP
            - containerPort: 51821
              protocol: TCP
          volumeMounts:
            - name: vpn-configs
              mountPath: /etc/wireguard
      volumes:
        - name: vpn-configs
          persistentVolumeClaim:
            claimName: vpn-configs
