apps/vpn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpn
  namespace: ynoacamino
spec:
  type: ClusterIP
  selector:
    app: vpn
  ports:
    - name: ui
      port: 80
      targetPort: 51821
      protocol: TCP
