apps/vpn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpn
  namespace: ynoacamino
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
    - hosts:
        - vpn.ynoacamino.me
      secretName: vpn-kube-tls
  rules:
    - host: vpn.ynoacamino.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vpn
                port:
                  number: 80
